# Lemonade

./: .gitignore  README.md  agents.md  pyproject.toml
plans/: architecture.md
src/lemonade/: __init__.py  cli.py  config.py
src/lemonade/browser/: __init__.py
src/lemonade/core/: __init__.py
