[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemonade"
version = "0.1.0"
description = "Local CLI tool for generating Etsy listing drafts and Pinterest copy from product photos"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tresor Tendance"}
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
lemonade = "lemonade.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
